--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.171.0"
+    "three": "0.171.0"
   },
   "devDependencies": {
     "vite": "^6.0.0"
