--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "neural-state",
+  "name": "cyber-racer",
   "private": true,
-  "version": "0.1.1",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,9 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "0.171.0"
-  },
-  "devDependencies": {
+    "three": "^0.172.0",
     "vite": "^6.0.0"
   }
 }
