--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cyber-racer",
+  "name": "neural-state-v1",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.172.0",
+    "three": "^0.172.0"
+  },
+  "devDependencies": {
     "vite": "^6.0.0"
   }
 }
